--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Tiny-EJS",
   "version": "0.0.1",
   "description": "Tiny Theme For Mog",
+  "author": "mogland",
   "repository": {
     "url": "https://github.com/mogland-dev/Mog-Theme-Tiny-EJS"
   }
